# pemmss

./: .gitignore  CITATION.cff  LICENSE.md  README.md  app.py  pemmss.py  pemmss_dashboard.bat  pylock.toml  pyproject.toml  requirements.txt
dashboard/: app.py  dashboard.qmd
documentation/: Code Audit.rtf  PEMMSS overview.drawio  PEMMSS_flowcharts.drawio
input_files/: input_constants_timeseries.csv  input_demand.csv  input_exploration_production_factors.csv  input_exploration_production_factors_timeseries.csv  input_graphs.csv  input_graphs_formatting.csv  input_historic.csv  input_parameters.csv  input_postprocessing.csv  input_project_coproducts.csv  input_projects.csv
input_files/shapefile/: shapefile.shp  shapefile.shx
input_files/template/: input_graphs.csv
input_files_blank/: input_demand.csv  input_exploration_production_factors_timeseries.csv  input_postprocessing.csv  input_project_coproducts.csv
input_files_examples/: input_exploration_production_factors.csv  input_exploration_production_factors_timeseries.csv  input_graphs.csv  input_graphs_formatting.csv  input_parameters.csv  input_postprocessing.csv  input_project_coproducts.csv  input_projects.csv
input_files_examples/10 iterations-with GIFs/: input_graphs.csv  input_parameters.csv  input_project_coproducts.csv  input_projects.csv
input_files_examples/10 iterations-with shapefile-and GIFs/: input_exploration_production_factors.csv  input_exploration_production_factors_timeseries.csv  input_postprocessing.csv  input_projects.csv
input_files_examples/100 iterations-with GIFs/: input_demand.csv  input_graphs.csv  input_graphs_formatting.csv  (+3 more)
modules/: deposit.py  file_export.py  file_import.py  post_processing.py  results.py  spatial.py
output_files/: placeholder.txt
(+36 files in other folders)
